# PersonaDesk

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-06-15-personadesk-phase-1.md  2026-06-15-personadesk-product-navigation.md
docs/superpowers/specs/: 2026-06-15-claw-pet-platform-design.md  2026-06-15-personadesk-platform-design.md
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_detection.rs  desktop_presence.rs  desktop_windows.rs  main.rs
src/app/: actions.ts  aiProvider.ts  companionWindowControl.test.ts  companionWindowControl.ts  desktopPresence.test.ts  desktopPresence.ts  desktopWindows.test.ts  desktopWindows.ts  localAgents.ts  navigation.ts  screenObservation.test.ts  screenObservation.ts  startupBehavior.test.ts  startupBehavior.ts  voicePlayback.ts  voiceRecognition.test.ts  voiceRecognition.ts
src/components/characters/: CharacterCard.tsx  CharacterStudioPage.tsx
src/components/layout/: AppShell.tsx  (+1 more)
src/domain/: characterDrafts.test.ts  characterDrafts.ts  characters.test.ts  characters.ts  conversation.test.ts  conversation.ts  defaultState.test.ts  defaultState.ts  desktopPresence.test.ts  desktopPresence.ts  executors.test.ts  executors.ts  memory.test.ts  memory.ts  observation.test.ts  observation.ts  promptBuilder.test.ts  promptBuilder.ts  storage.test.ts  storage.ts  sync.test.ts  sync.ts  tasks.test.ts  tasks.ts  types.ts  voice.test.ts  voice.ts
(+10 files in other folders)
