[package]
name = "personadesk"
version = "0.1.0"
description = "PersonaDesk desktop shell"
authors = ["PersonaDesk contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
